fix to-do body overflow and tweak position of 'edit' icon

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -30,12 +30,10 @@ ul {
 
 li {
     background: #fff;
-    height: 100%;
     line-height: 40px;
     color: #666;
     position: relative;
     width: 100%;
-    overflow: hidden;
 }
 
 /* select every other li */
@@ -119,10 +117,10 @@ input[type=checkbox]:checked::before {
 
 .task-body {
     display: inline-block;
-    /*width: 370px;*/
     width: 360px;
     position: relative;
     left: 60px;
+    overflow: auto;
 }
 
 .completed {
@@ -132,7 +130,7 @@ input[type=checkbox]:checked::before {
 
 .fa-edit {
     float: right;
-    margin-top: 12px;
+    margin-top: 11px;
     margin-right: 5px;
     opacity: 0;
     transition: visibility 0.25s linear, opacity 0.25s linear;
